Fix: Really truncate long usernames
Regression of MediaWiki UI icon class.

Follow Up: I27638602a0c3df6af40f13823e64e0ab31cc03c9

Bug: 72828

--- a/less/mainmenu.less
+++ b/less/mainmenu.less
@@ -128,7 +128,12 @@
 		}
 
 		.icon-profile {
-			padding-right: 40px;
+			margin-right: 40px;
+		}
+
+		// FIXME: Why is logout button with mw-ui icon class larger?
+		.mw-ui-icon-profile {
+			margin-right: 48px;
 		}
 
 		a {
